--- a/prueba/html/index.html
+++ b/prueba/html/index.html
@@ -11,7 +11,7 @@
         <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../estilos/style_principal.css">
         <link rel="stylesheet" href="../estilos/mobile.css" media="screen and (max-width: 600px)">
-        <link rel="stylesheet" href="../estilos/tamaño_2.css" media="screen and (max-width: 800px)">
+        <link rel="stylesheet" href="/prueba/estilos/tamaño_2.css" media="screen and (max-width: 800px)">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Borel&family=Handjet:wght@200&display=swap" rel="stylesheet">
